# ken_memorial

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tributes.py  0002_add_extended_tribute_fields.py  0003_add_sticky_note_color_and_pen_style.py  0003_add_visibility_and_audit_fields.py  0004_image_data.py  0005_merge_tribute_heads.py  0006_add_public_wall_index.py  0007_add_ai_memorial_chat.py
backend/app/: config.py  db.py  main.py  security.py
backend/app/api/routes/: admin.py  admin_ai.py  admin_auth.py  chat.py  public.py  submissions.py
backend/app/models/: __init__.py  ai.py  tribute.py
backend/app/schemas/: admin.py  chat.py  persona.py  tribute.py
backend/app/services/: tributes.py
backend/app/services/ai/: __init__.py  chat.py  memory.py  openai_gateway.py  persona.py  prompt.py  rate_limit.py  safety.py
backend/evals/: ask_about_ken_v1.json
backend/scripts/: __init__.py  import_persona.py
backend/tests/: test_ai_memorial.py  test_public_tributes.py  test_submission_schema.py
docs/: ARCHITECTURE.md  CORE_PERSONA_OPERATIONS.md  MVP_BACKLOG.md  PRD.md  PRD_KEN_AI_CHAT.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: AdminAiPanel.tsx
frontend/src/components/ui/: button.tsx  particle-button-demo.tsx  (+1 more)
frontend/src/pages/: KenChatPage.tsx
